@@ -6,6 +6,7 @@ v0.6.2 (xx xxx 2010)
 ====================
  * The "Guten Tag" release
  * pidgin-privacy-please is now translatable
+ * Added option to specifically block OSCAR (ICQ/AIM) authorization requests
 
 v0.6.1 (22 Oct 2009)
 ====================
